# collective_robotics_ss2025

./: README.md
assignment_3/: detailes_sim.py  parallel_experiment.py  visualize_woodchunk.py
assignments/Assignment_4/task_1/: README.md  locust_visualization.py  multiple_runs.py  transition_count.py  transition_matrix_A.npy
assignments/Assignment_4/task_2/: Extended_model.py  Readme.Md  system_course.py
assignments/Assignmnet_1/: README.md  simulation_trial.py  synchronization.py  task_1_scaling.py  task_2_B.py
assignments/assignment_3_memon2s_upatil2s/: Readme.md  assignment_3_task_1.py  parallel_experiment.py  visualize_woodchunk.py
assignments/assignment_3_memon2s_upatil2s/results_plots/: experiment_summary_data.csv
swarm_anti_agents/: package.xml  setup.py
swarm_anti_agents/swarm_anti_agents/: anti_agent_node.py
swarm_behaviors/: package.xml  setup.cfg  setup.py
swarm_behaviors/launch/: swarm.launch.py
swarm_behaviors/swarm_behaviors/: robot_controller.py  swarm_sim.py
swarm_behaviors/swarm_behaviors/results/: simulation_data_robust.csv
swarm_behaviors/swarm_behaviors/results_plots/: experiment_summary_data.csv
